# sfml-tetris

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE.md  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
src/: constant.h  game.cpp  game.h  grid.cpp  grid.h  layout.h  main.cpp  pieces.cpp  pieces.h  utils.cpp  utils.h
